# corpus

./: README.md  agent-graph.mmd  pyproject.toml
src/corpus/: __init__.py  cli.py  config.py  ingestion.py  reranker.py  storage.py  watcher.py
src/corpus/agent/: graph.py  llm.py  nodes.py  state.py
src/corpus/ingestion/: __init__.py  pipeline.py
src/corpus/ingestion/loaders/: __init__.py  base.py  md.py  pdf.py  web.py
src/corpus/loaders/: __init__.py  base.py  web.py
src/corpus/retrieval/: __init__.py  reranker.py  retriever.py
