[project]
name = "corpus"
version = "0.1.0"
description = "Personal knowledge base"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "trafilatura>=1.12",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-experimental>=0.3",
    "langchain-huggingface>=0.1",
    "lancedb>=0.21",
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "unstructured[html,pdf]>=0.16",
    "sqlite-utils>=3.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corpus"]

[project.scripts]
corpus = "corpus.cli:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["corpus"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
